wxc/include/ewxw/wxc_glue.h


TClass(wxBoxSizer) wxBoxSizer_Create( int orient );

int        wxBoxSizer_GetOrientation( TSelf(wxBoxSizer) _obj );


/* wxFlexGridSizer */
TClassDefExtend(wxFlexGridSizer,wxGridSizer)
void       wxFlexGridSizer_AddGrowableCol( TSelf(wxFlexGridSizer) _obj, size_t idx );

void       wxFlexGridSizer_AddGrowableRow( TSelf(wxFlexGridSizer) _obj, size_t idx );

void       wxFlexGridSizer_CalcMin( TSelf(wxFlexGridSizer) _obj, TSizeOutVoid(_w,_h) );

TClass(wxFlexGridSizer) wxFlexGridSizer_Create( int rows, int cols, int vgap, int hgap );

void       wxFlexGridSizer_RecalcSizes( TSelf(wxFlexGridSizer) _obj );

void       wxFlexGridSizer_RemoveGrowableCol( TSelf(wxFlexGridSizer) _obj, size_t idx );

void       wxFlexGridSizer_RemoveGrowableRow( TSelf(wxFlexGridSizer) _obj, size_t idx );



/* wxGridSizer */
TClassDefExtend(wxGridSizer,wxSizer)
void       wxGridSizer_CalcMin( TSelf(wxGridSizer) _obj, TSizeOutVoid(_w,_h) );

TClass(wxGridSizer) wxGridSizer_Create( int rows, int cols, int vgap, int hgap );

int        wxGridSizer_GetCols( TSelf(wxGridSizer) _obj );

int        wxGridSizer_GetHGap( TSelf(wxGridSizer) _obj );

int        wxGridSizer_GetRows( TSelf(wxGridSizer) _obj );

int        wxGridSizer_GetVGap( TSelf(wxGridSizer) _obj );

void       wxGridSizer_RecalcSizes( TSelf(wxGridSizer) _obj );

void       wxGridSizer_SetCols( TSelf(wxGridSizer) _obj, int cols );

void       wxGridSizer_SetHGap( TSelf(wxGridSizer) _obj, int gap );

void       wxGridSizer_SetRows( TSelf(wxGridSizer) _obj, int rows );

void       wxGridSizer_SetVGap( TSelf(wxGridSizer) _obj, int gap );


/* wxSizer */
TClassDefExtend(wxSizer,wxObject)
void       wxSizer_Add( TSelf(wxSizer) _obj, TSize(width,height), int option, int flag, int border, void* userData );

void       wxSizer_AddSizer( TSelf(wxSizer) _obj, TClass(wxSizer) sizer, int option, int flag, int border, void* userData );

void       wxSizer_AddWindow( TSelf(wxSizer) _obj, TClass(wxWindow) window, int option, int flag, int border, void* userData );

void       wxSizer_CalcMin( TSelf(wxSizer) _obj, TSizeOutVoid(_w,_h) );

void       wxSizer_Fit( TSelf(wxSizer) _obj, TClass(wxWindow) window );

int        wxSizer_GetChildren( TSelf(wxSizer) _obj, void* _res, int _cnt );

void       wxSizer_GetMinSize( TSelf(wxSizer) _obj, TSizeOutVoid(_w,_h) );

void       wxSizer_GetPosition( TSelf(wxSizer) _obj, TPointOutVoid(_x,_y) );

void       wxSizer_GetSize( TSelf(wxSizer) _obj, TSizeOutVoid(_w,_h) );

void       wxSizer_Insert( TSelf(wxSizer) _obj, int before, TSize(width,height), int option, int flag, int border, void* userData );

void       wxSizer_InsertSizer( TSelf(wxSizer) _obj, int before, TClass(wxSizer) sizer, int option, int flag, int border, void* userData );

void       wxSizer_InsertWindow( TSelf(wxSizer) _obj, int before, TClass(wxWindow) window, int option, int flag, int border, void* userData );

void       wxSizer_Layout( TSelf(wxSizer) _obj );

void       wxSizer_Prepend( TSelf(wxSizer) _obj, TSize(width,height), int option, int flag, int border, void* userData );

void       wxSizer_PrependSizer( TSelf(wxSizer) _obj, TClass(wxSizer) sizer, int option, int flag, int border, void* userData );

void       wxSizer_PrependWindow( TSelf(wxSizer) _obj, TClass(wxWindow) window, int option, int flag, int border, void* userData );

void       wxSizer_RecalcSizes( TSelf(wxSizer) _obj );

void       wxSizer_SetDimension( TSelf(wxSizer) _obj, TRect(x,y,width,height) );

void       wxSizer_SetItemMinSize( TSelf(wxSizer) _obj, int pos, TSize(width,height) );

void       wxSizer_SetItemMinSizeSizer( TSelf(wxSizer) _obj, TClass(wxSizer) sizer, TSize(width,height) );

void       wxSizer_SetItemMinSizeWindow( TSelf(wxSizer) _obj, TClass(wxWindow) window, TSize(width,height) );

void       wxSizer_SetMinSize( TSelf(wxSizer) _obj, TSize(width,height) );

void       wxSizer_SetSizeHints( TSelf(wxSizer) _obj, TClass(wxWindow) window );


/* wxSizerItem */
TClassDefExtend(wxSizerItem,wxObject)
void       wxSizerItem_CalcMin( TSelf(wxSizerItem) _obj, TSizeOutVoid(_w,_h) );

TClass(wxSizerItem) wxSizerItem_Create( TSize(width,height), int option, int flag, int border, void* userData );

void*      wxSizerItem_CreateInSizer( TClass(wxSizer) sizer, int option, int flag, int border, void* userData );

void*      wxSizerItem_CreateInWindow( TClass(wxWindow) window, int option, int flag, int border, void* userData );

int        wxSizerItem_GetBorder( TSelf(wxSizerItem) _obj );

int        wxSizerItem_GetFlag( TSelf(wxSizerItem) _obj );

void       wxSizerItem_GetMinSize( TSelf(wxSizerItem) _obj, TSizeOutVoid(_w,_h) );

void       wxSizerItem_GetPosition( TSelf(wxSizerItem) _obj, TPointOutVoid(_x,_y) );

float      wxSizerItem_GetRatio( TSelf(wxSizerItem) _obj );

void       wxSizerItem_GetSize( TSelf(wxSizerItem) _obj, TSizeOutVoid(_w,_h) );

TClass(wxSizer) wxSizerItem_GetSizer( TSelf(wxSizerItem) _obj );

void*      wxSizerItem_GetUserData( TSelf(wxSizerItem) _obj );

TClass(wxWindow) wxSizerItem_GetWindow( TSelf(wxSizerItem) _obj );

TBool      wxSizerItem_IsSizer( TSelf(wxSizerItem) _obj );

TBool      wxSizerItem_IsSpacer( TSelf(wxSizerItem) _obj );

TBool      wxSizerItem_IsWindow( TSelf(wxSizerItem) _obj );

void       wxSizerItem_SetBorder( TSelf(wxSizerItem) _obj, int border );

void       wxSizerItem_SetDimension( TSelf(wxSizerItem) _obj, TRect(_x,_y,_w,_h) );

void       wxSizerItem_SetFlag( TSelf(wxSizerItem) _obj, int flag );

void       wxSizerItem_SetFloatRatio( TSelf(wxSizerItem) _obj, float ratio );

void       wxSizerItem_SetInitSize( TSelf(wxSizerItem) _obj, TPoint(x,y) );

void       wxSizerItem_SetRatio( TSelf(wxSizerItem) _obj, TSize(width,height) );

void       wxSizerItem_SetSizer( TSelf(wxSizerItem) _obj, TClass(wxSizer) sizer );

void       wxSizerItem_SetWindow( TSelf(wxSizerItem) _obj, TClass(wxWindow) window );

TClass(wxStaticBoxSizer) wxStaticBoxSizer_Create( TClass(wxStaticBox) box, int orient );

TClass(wxStaticBox) wxStaticBoxSizer_GetStaticBox( TSelf(wxStaticBoxSizer) _obj );